--- a/src/app/admin/features/Bulk_operation/activation/activation.component.scss
+++ b/src/app/admin/features/Bulk_operation/activation/activation.component.scss
@@ -5,9 +5,11 @@
     text-align: center;
     padding: 20px;
     background-color: antiquewhite;
+    text-transform: uppercase;
 }
 .p{
     font-size: 15px;
+  
 }
 .file {
     outline: 2px ridge;
@@ -93,3 +95,4 @@ select,
   .custom{
     background-color: lightslategrey;
   }
+
