--- a/src/app/admin/features/Bulk_operation/addon-activation/addon-activation.component.html
+++ b/src/app/admin/features/Bulk_operation/addon-activation/addon-activation.component.html
@@ -35,7 +35,7 @@
                                 </p>
                             </div>
                         </div>
-                        <a class="mb-3" (click)="generateExcel('Addon')">* Download Format File</a>
+                        <a class="mb-3" (click)="generateExcel('Addon')" style="cursor: pointer;">* Download Format File</a>
                         <div class="checkbox-text mb-3">
                             <div class="checkbox-content">
                                 <input type="checkbox" id="terms" formControlName="billingAddressCheckbox"
