--- a/src/app/admin/features/Bulk_operation/recurring/recurring.component.html
+++ b/src/app/admin/features/Bulk_operation/recurring/recurring.component.html
@@ -1,40 +1,51 @@
-<section style="max-height: 775px;overflow: scroll;">
+<section style="max-height: 800px;overflow: scroll;">
     <div class=" border p-3">
-        <div class=" display justify-content-center align-items-center">
-            <div class="col-12 col-md-12 mobile display justify-content-center align-items-center">
+        <div class=" display justify-content-start align-items-center">
+            <div class="col-12 col-md-12 mobile display justify-start-center align-items-center">
                 <div class="col-12  col-md-3  mx-2 mb-3">
                     <!-- <select id="cas" placeholder="Select the CAS" [(ngModel)]="operatorid">
                         <option value="0" selected>Select Operator</option>
                         <option *ngFor="let operator of operatorList" [value]="operator.value">{{ operator.name }}
                         </option>
                     </select> -->
-                    <input type="text" matInput [matAutocomplete]="auto" [(ngModel)]="operatorid" maxlength="20"
-                    (input)="filterOperators($event)" placeholder="Select a Operator" [matAutocompleteDisabled]="false"
-                    [value]="selectedOperator?.name">
-    
-                <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayOperator">
-                    <mat-option *ngFor="let operator of filteredOperators" [value]="operator.value"
-                        (click)="onSubscriberStatusChange(operator)">
-                        {{ operator.name }}
-                    </mat-option>
-                </mat-autocomplete>
-                <div *ngIf="submitted && !operatorid" class="text-danger" style="font-size: small;">
-                    Operator Name is required
+                    <div class="input-container">
+                        <input type="text" matInput [matAutocomplete]="auto" [(ngModel)]="operatorid" maxlength="20"
+                            (input)="filterOperators($event)" placeholder="Select a Operator"
+                            [matAutocompleteDisabled]="false" [value]="selectedOperator?.name">
+                        <i class="bx bx-chevron-down icon-right"></i>
+                    </div>
+                    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayOperator">
+                        <mat-option *ngFor="let operator of filteredOperators" [value]="operator.value"
+                            (click)="onSubscriberStatusChange(operator)">
+                            {{ operator.name }}
+                        </mat-option>
+                    </mat-autocomplete>
+                    <div *ngIf="submitted && !operatorid" class="text-danger" style="font-size: small;">
+                        Operator Name is required
+                    </div>
                 </div>
-                </div>
-                <div class="col-12  col-md-3 mb-3">
+                <div class="col-12  col-md-3 mx-2 mb-3">
                     <input type="text" placeholder="Enter Smartcard" [(ngModel)]="searchname">
                 </div>
-                <button class="btn custom-btn mx-3  bttn" type="button" (click)="submit(1)">
+                <button class="btn custom-btn mx-3 mb-3 bttn" type="button" (click)="submit(1)">
                     Total list
                 </button>
-                <button class="btn custom-btn mx-1 bttn" type="button" (click)="submit(2)">
+                <button class="btn custom-btn mx-1 mb-3 bttn" type="button" (click)="submit(2)">
                     On list
                 </button>
 
-                <button class="btn custom-btn mx-1  bttn" type="button" (click)="submit(3)">
+                <button class="btn custom-btn mx-1 mb-3  bttn" type="button" (click)="submit(3)">
                     Off list
                 </button>
+                <!-- <div class="d-flex mb-3 ">
+                    <div class=" mb-2  export-icon " (click)="getActivationReport(2)">
+                        <img src="/assets/images/icons/Excel.png" alt="Excel Icon">
+                    </div>
+                    <div class=" mb-2  export-icon" (click)="getActivationReport(1)">
+                        <img src="/assets/images/icons/pdf.png" alt="PDF Icon">
+                    </div>
+                </div> -->
+
             </div>
         </div>
     </div>
@@ -102,20 +113,22 @@
                 </div> -->
 
                 <div class="col d-flex justify-content-center align-items-center mb-3">
-               
+
                     <button class="btn btn-outline-info mx-1" mat-raised-button color="primary" type="button"
                         [disabled]="!isAnyRowSelected" (click)="Active()">
                         Active
                     </button>
                     <button class="btn btn-outline-info mx-1" mat-raised-button color="accent" type="button"
-                    [disabled]="!isAnyRowSelected" (click)="Deactive()">
-                    Deactive
-                </button>
-                  
+                        [disabled]="!isAnyRowSelected" (click)="Deactive()">
+                        Deactive
+                    </button>
+
                 </div>
                 <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
-                    rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs" style="max-height: 775px;overflow: scroll;"
-                    [rowData]="reccuringData" (gridReady)="onGridReady($event)" [enableCellTextSelection]="true" (selectionChanged)="onSelectionChanged()">
+                    rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs"
+                    style="max-height: 775px;overflow: scroll;" [rowData]="reccuringData"
+                    (gridReady)="onGridReady($event)" [enableCellTextSelection]="true"
+                    (selectionChanged)="onSelectionChanged()">
                 </ag-grid-angular>
             </div>
         </div>
