--- a/src/app/admin/features/cas_operaion/force-tuning/force-tuning.component.html
+++ b/src/app/admin/features/cas_operaion/force-tuning/force-tuning.component.html
@@ -35,7 +35,7 @@
                                             <!-- <input placeholder="Enter Smartcard" formControlName="intendid" type="text"
                                                 (keypress)="onKeydown($event)" [ngModel]="intendid_1" maxlength="20"> -->
 
-                                            <input placeholder="Enter the smartcard..." class="input_sb" id="searchitem"
+                                            <input placeholder="Enter the smartcard..." class="input_sb" 
                                                 #searchitem style="font-size: 14px;"
                                                 formControlName="intendid" (keyup)="onSmartcardlist( searchitem?.value)"
                                                 [(ngModel)]="intendid_1">
