--- a/src/app/admin/features/channel_setting/_Dialogue/operator/lcodashboard/lcodashboard.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/operator/lcodashboard/lcodashboard.component.html
@@ -102,12 +102,12 @@
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="mx-2 mb-3 h-100">
                         <div class="mb-2" style="padding: 0.5rem;background-color: #213d4d;">
-                            <h5 style="color: white;font-weight: 600;">Packagewise Recharge Amount </h5>
+                            <h5 style="color: white;font-weight: 600;">Current YearPackagewise Recharge Amount </h5>
                         </div>
                         <div class="card">
-                            <p style="text-align: center;color: rgb(250, 81, 95);">This chart shows package-wise total
-                                recharged amount of the current year</p>
-                            <div class="line mb-2"></div>
+                            <!-- <p style="text-align: center;color: rgb(250, 81, 95);">This chart shows package-wise total
+                                recharged amount of the current year</p> -->
+               
                             <div class=" input_box d-flex justify-content-end align-item-center mb-2">
                                 <div class="col-12 col-md-4 d-flex  justify-content-center align-items-center">
                                     <span for="">SELECT PACKAGE </span>
@@ -177,11 +177,10 @@
                     <h5 style="color: white;font-weight: 600;">CURRENT YEAR PACKAGE WISE RECHARGE COUNT </h5>
                 </div>
                 <div class="card1 ">
-                    <!-- <h4 style="text-align: center;">Packagewise Recharge Count</h4>
-                    <br> -->
-                    <p style="text-align: center;color: rgb(250, 81, 95);">This chart shows package wise recharged
+                    
+                    <!-- <p style="text-align: center;color: rgb(250, 81, 95);">This chart shows package wise recharged
                         count of current year
-                    </p>
+                    </p> -->
                     <div class="line mb-2"></div>
                     <div>
                         <!-- <app-lcochart></app-lcochart> -->
