--- a/src/app/admin/features/Bulk_operation/activation/activation.component.html
+++ b/src/app/admin/features/Bulk_operation/activation/activation.component.html
@@ -118,7 +118,8 @@
                 <div class="d-flex justify-content-end align-items-center mt-3 ">
                     <button type="button" class="btn btn-success mx-2" (click)="goBack()">Back &nbsp;<i
                             class="fa fa-arrow-left" aria-hidden="true"></i></button>
-                    <button type="submit" class="btn btn-success"  [disabled]="!lcogroupid  || !plan"  (click)="bulkActivation()">Submit</button>
+                    <button type="submit" class="btn btn-success" [disabled]="!lcogroupid  || !plan"
+                        (click)="bulkActivation()">Submit</button>
                 </div>
 
             </div>
@@ -131,9 +132,10 @@
                 </div>
                 <div class="row d-flex align-items-center justify-content-center" style="padding: 0.5rem;">
                     <div class="col-12 mb-3">
-                        <div class="row align-items-center justify-content-center mb-3" style="gap:10px;">
+                        <div class="row align-items-start justify-content-center mb-3" style="gap:10px;">
                             <div class="col-12 col-md-3 mb-2 mb-md-0 ">
-                                <input class="date form-control  bttn" type="date" name="" id="" [(ngModel)]="selectedDate">
+                                <input class="date form-control  bttn" type="date" name="" id=""
+                                    [(ngModel)]="selectedDate">
                             </div>
                             <div class="col-12 col-md-3 mb-2 mb-md-0">
                                 <button class="btn btn-secondary w-100 bttn" (click)="getData()">Get Data</button>
@@ -141,12 +143,18 @@
                             <div class="col-12 col-md-3 mb-2 mb-md-0">
                                 <button class="btn btn-secondary w-100 bttn" (click)="refresh()">Refresh</button>
                             </div>
+                            <div class="col-12 col-md-1 mb-2  export-icon me-2" (click)="getActivationReport(2)">
+                                <img src="/assets/images/icons/Excel.png" alt="Excel Icon">
+                            </div>
+                            <div class="col-12 col-md-1 mb-2  export-icon" (click)="getActivationReport(1)">
+                                <img src="/assets/images/icons/pdf.png" alt="PDF Icon">
+                            </div>
                         </div>
 
                         <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
-                            rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions" style="max-height: 775px;overflow: scroll;"
-                            [columnDefs]="columnDefs" [rowData]="rowData" (gridReady)="onGridReady()"
-                            [enableCellTextSelection]="true">
+                            rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions"
+                            style="max-height: 775px;overflow: scroll;" [columnDefs]="columnDefs" [rowData]="rowData"
+                            (gridReady)="onGridReady()" [enableCellTextSelection]="true">
                         </ag-grid-angular>
                     </div>
                 </div>
