--- a/src/app/admin/features/Bulk_operation/addon-activation/addon-activation.component.scss
+++ b/src/app/admin/features/Bulk_operation/addon-activation/addon-activation.component.scss
@@ -6,9 +6,11 @@
     border-radius: 5px;
     transition: background-color 0.3s ease;
 }
-.container{
+
+.container {
     border: 1px solid lightgrey;
 }
+
 h1 {
     text-align: center;
 }
@@ -141,22 +143,29 @@ option:hover {
     width: 100%;
     height: 600px;
     text-align: center;
-  }
-  .responsive-grid {
+}
+
+.responsive-grid {
     width: 100%;
-    max-width: 1200px; 
+    max-width: 1200px;
     margin: auto;
-  }
-  
-  
-  @media (max-width: 768px) {
+}
+
+
+@media (max-width: 768px) {
     .responsive-grid {
         width: 100%;
     }
-  }
-  ::ng-deep .ag-header{
+}
+
+::ng-deep .ag-header {
     background-color: #557c9b !important;
-  }
-  .custom{
+}
+
+.custom {
     background-color: lightslategrey;
-  }
+}
+
+.mat-mdc-option {
+    min-height: 34px;
+}
