--- a/src/app/admin/features/Bulk_operation/bulk-page-updation/bulk-page-updation.component.html
+++ b/src/app/admin/features/Bulk_operation/bulk-page-updation/bulk-page-updation.component.html
@@ -37,7 +37,7 @@
                     <small class="text-danger">CAS is required.</small>
                 </div>
             </div> -->
-            <mat-form-field appearance="outline" class="mx-2 mobileview" *ngIf="isCheckboxChecked">
+            <mat-form-field appearance="outline" class="mx-2 mobileview" >
                 <mat-label>Select Package</mat-label>
                 <mat-select [(ngModel)]="package" [disabled]="!isCheckboxChecked" panelClass="custom-select-panel"
                     (closed)="onDropdownClosed()">
@@ -55,14 +55,17 @@
             <mat-form-field appearance="outline" class="mx-2 mobileview">
                 <mat-label>Enter a date range</mat-label>
                 <mat-date-range-input [rangePicker]="picker" [max]="maxDate">
-                    <input matStartDate matInput placeholder="Start date" [(ngModel)]="fromdate"
+                    <input matStartDate matInput placeholder="Start date" 
                         (dateChange)="getFromDate($event)">
-                    <input matEndDate matInput placeholder="End date" [(ngModel)]="todate"
+                    <input matEndDate matInput placeholder="End date" 
                         (dateChange)="getToDate($event)">
                 </mat-date-range-input>
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-date-range-picker #picker></mat-date-range-picker>
             </mat-form-field>
+
+
+            
             <!-- <mat-form-field appearance="outline" class="mx-2">
                     <mat-label>Select LCO</mat-label>
                     <mat-select [(ngModel)]="operatorid">
@@ -165,9 +168,9 @@
                 <mat-form-field appearance="outline" class="mx-2">
                     <mat-label>Enter a date range</mat-label>
                     <mat-date-range-input [rangePicker]="picker" [max]="maxDate">
-                        <input matStartDate matInput placeholder="Start date" [(ngModel)]="fromdate"
+                        <input matStartDate matInput placeholder="Start date" 
                             (dateChange)="getFromDate($event)">
-                        <input matEndDate matInput placeholder="End date" [(ngModel)]="todate"
+                        <input matEndDate matInput placeholder="End date" 
                             (dateChange)="getToDate($event)">
                     </mat-date-range-input>
                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -252,9 +255,9 @@
                 <mat-form-field appearance="outline" class="mx-2 mobileview">
                     <mat-label>Enter a date range</mat-label>
                     <mat-date-range-input [rangePicker]="picker">
-                        <input matStartDate matInput placeholder="Start date" [(ngModel)]="fromdate"
+                        <input matStartDate matInput placeholder="Start date" 
                             (dateChange)="getFromDate($event)">
-                        <input matEndDate matInput placeholder="End date" [(ngModel)]="todate"
+                        <input matEndDate matInput placeholder="End date" 
                             (dateChange)="getToDate($event)">
                     </mat-date-range-input>
                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
