--- a/src/app/admin/features/Bulk_operation/deactivation/deactivation.component.scss
+++ b/src/app/admin/features/Bulk_operation/deactivation/deactivation.component.scss
@@ -5,9 +5,11 @@
     text-align: center;
     padding: 20px;
     background-color: antiquewhite;
+    text-transform: uppercase;
 }
 .p{
     font-size: 15px;
+  
 }
 
 .file {
