--- a/src/app/admin/features/Bulk_operation/subscription-exdend/subscription-exdend.component.html
+++ b/src/app/admin/features/Bulk_operation/subscription-exdend/subscription-exdend.component.html
@@ -1,4 +1,4 @@
-<section class="Tab col-12" style="max-height: 775px;overflow: scroll;">
+<section class="Tab col-12">
     <div class="title">
         <p>Subscription Date Extend (For Active Subscription)
         </p>
@@ -12,7 +12,7 @@
                 </div>
                 <div class="mb-3">
                     <div class="mb-3">
-                        <span class="p" style="font-weight: 500;"><span style="display: none;">p p</span> 1) Before
+                        <span class="p" style="font-weight: 500;"> 1) Before
                             activation, make
                             sure that the LCO wallet has a sufficient cash balance, Will be
                             activated only as long as there is a <span style="color: red;">cash balance in the LCO
@@ -20,7 +20,7 @@
                         </span>
                     </div>
                     <div class="mb-3">
-                        <span class="p" style="font-weight: 500;"><span style="display: none;">p p</span>
+                        <span class="p" style="font-weight: 500;">
                             2) Must have kept the data according to the format file (Please check the format file by
                             below
                             download option) and fill the Smartcard number without incorrect otherwise <span
@@ -51,8 +51,7 @@
                     <div class="col-5 col-12 col-md-6 col-sm-6">
                         <div style="color: rgb(1, 89, 92);font-weight: 400;font-size: 15px;" for="">No of Days :</div>
                     </div>
-                    <input (input)="validateLength($event)" type="number" maxlength="3" min="0"
-                        [(ngModel)]="days">
+                    <input (input)="validateLength($event)" type="number" maxlength="3" min="0" [(ngModel)]="days">
                 </div>
                 <!-- <div *ngIf="daysInvalid" style="color: red;">Please enter exactly 3 digits.</div> -->
                 <div class=" d-flex justify-content-end align-items-center mt-3">
@@ -69,9 +68,9 @@
                 </div>
                 <div class="row d-flex align-items-center justify-content-center" style="padding: 0.5rem;">
                     <div class="col-12 mb-3">
-                        <div class="row align-items-center justify-content-center mb-3" style="gap:10px;">
-                            <div class="col-12 col-md-3 mb-2 mb-md-0"> 
-                                <input class="date" placeholder="Select Date" type="date" name="" id="" 
+                        <div class="row align-items-start justify-content-center mb-3" style="gap:10px;">
+                            <div class="col-12 col-md-3 mb-2 mb-md-0">
+                                <input class="date" placeholder="Select Date" type="date" name="" id=""
                                     [(ngModel)]="selectedDate">
                             </div>
                             <div class="col-12 col-md-3 mb-2 mb-md-0">
@@ -80,12 +79,20 @@
                             <div class="col-12 col-md-3 mb-2 mb-md-0">
                                 <button class="btn btn-secondary w-100 bttn" (click)="refresh()">Refresh</button>
                             </div>
+                            <!-- <div class="d-flex mb-3 "> -->
+                                <div class="col-6 col-md-1 mb-2  export-icon " (click)="getExtendReport(2)">
+                                    <img src="/assets/images/icons/Excel.png" alt="Excel Icon">
+                                </div>
+                                <div class="col-6 col-md-1 mb-2  export-icon" (click)="getExtendReport(1)">
+                                    <img src="/assets/images/icons/pdf.png" alt="PDF Icon">
+                                </div>
+                            <!-- </div> -->
                         </div>
 
-                        <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
-                            rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions"
-                            [columnDefs]="columnDefs" [rowData]="rowData" (gridReady)="onGridReady()"
-                            [enableCellTextSelection]="true">
+                        <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' 
+                            class="ag-theme-alpine table-class" style="max-height: 775px;overflow: scroll;" rowAnimation
+                            [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs"
+                            [rowData]="rowData" (gridReady)="onGridReady()" [enableCellTextSelection]="true">
                         </ag-grid-angular>
                     </div>
                 </div>
@@ -93,3 +100,5 @@
         </div>
     </div>
 </section>
+
+
