--- a/src/app/admin/features/cas_operaion/finger-print/finger-print.component.html
+++ b/src/app/admin/features/cas_operaion/finger-print/finger-print.component.html
@@ -103,24 +103,22 @@
                                     <small class="text-danger">Intend To is required.</small>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-5" *ngIf="isSmartcardEnabled">
-                                <!-- <input placeholder="Enter Smartcard" type="text" (keypress)="onKeydown($event)"
-                                    [(ngModel)]="intendid_1" [maxlength]="castype != 6 ? 20 : 14"
-                                    formControlName="intendid"> -->
-                                <!-- <input placeholder="Enter Smartcard" type="text" formControlName="intendid"
-                                    [(ngModel)]="intendid_1" (keypress)="onKeydown($event)"
-                                    [maxlength]="castype != 6 ? 20 : 14" (input)="validateExactLength()">
-                                <div *ngIf="isInvalidLength">
-                                    <small class="text-danger">
-                                        Please enter exactly {{ castype != 6 ? 20 : 14 }} digits.
-                                    </small>
-                                </div> -->
+                            <div class="col-12 col-md-5" *ngIf="isMsoEnabled">
+                                <input class="input_sb" readOnly style="font-size: 14px;"
+                                    formControlName="intendid" [(ngModel)]="intendid_1">
 
-                                <input placeholder="Enter the smartcard..." class="input_sb" id="searchitem" #searchitem
+                                <div *ngIf="form.get('intendid')?.invalid && form.get('intendid')?.touched">
+                                    <small *ngIf="form.get('intendid')?.errors?.['required']"
+                                        class="text-danger">Intend ID is required.</small>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-5" *ngIf="isSmartcardEnabled">
+                      
+                                <input placeholder="Enter the smartcard..." class="input_sb"  #searchitem
                                     style="font-size: 14px;" [maxlength]="castype != 6 ? 20 : 14"
                                     (input)="validateExactLength()" formControlName="intendid"
                                     (keyup)="onSmartcardlist( searchitem?.value)" [(ngModel)]="intendid_1">
-                                <div style="width: 60%; max-height: 150px;overflow: scroll;;"
+                                <div style=" max-height: 150px;overflow: scroll;;"
                                     class="dropdown-menu input"
                                     [ngClass]="(subscriberList.length != 0 && searchitem?.value?.length != 0 && showDropdown) ? 'show' : 'hide'"
                                     aria-labelledby="dropdownMenuButton">
@@ -151,6 +149,9 @@
                             </div>
                         </div>
 
+
+                     
+                          
                         <div class="input-box mb-3">
                             <div class="col-sm-4">
                                 <label for="">Type</label>
