--- a/src/app/admin/features/cas_operaion/mail/mail.component.html
+++ b/src/app/admin/features/cas_operaion/mail/mail.component.html
@@ -53,9 +53,19 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div *ngIf="isSmartcardEnabled || isAreaCodeEnabled" class="input-box mb-3">
+                                    <div *ngIf="isMsoEnabled || isSmartcardEnabled || isAreaCodeEnabled"
+                                        class="input-box mb-3">
                                         <div class="col-12 col-md-4">
                                             <label for="">Intend ID</label>
+                                        </div>
+                                        <div class="col-12 col-md-8" *ngIf="isMsoEnabled">
+                                            <input class="input_sb" readOnly style="font-size: 14px;"
+                                                formControlName="intendid" [(ngModel)]="intendid_1">
+
+                                            <div *ngIf="form.get('intendid')?.invalid && form.get('intendid')?.touched">
+                                                <small *ngIf="form.get('intendid')?.errors?.['required']"
+                                                    class="text-danger">Intend ID is required.</small>
+                                            </div>
                                         </div>
                                         <div class="col-12 col-md-8" *ngIf="isSmartcardEnabled">
                                             <!-- <input placeholder="Enter Smartcard" type="text" formControlName="intendid"
@@ -67,9 +77,8 @@
                                                 </small>
                                             </div> -->
 
-                                            <input placeholder="Enter the smartcard..." class="input_sb" id="searchitem"
-                                                #searchitem style="font-size: 14px;"
-                                                (input)="validateExactLength()"
+                                            <input placeholder="Enter the smartcard..." class="input_sb" #searchitem
+                                                style="font-size: 14px;" (input)="validateExactLength()"
                                                 formControlName="intendid" (keyup)="onSmartcardlist( searchitem?.value)"
                                                 [(ngModel)]="intendid_1">
                                             <div style="width: 60%; max-height: 150px;overflow: scroll;;"
@@ -84,7 +93,7 @@
                                                 <small class="text-danger">Indend Id is required.</small>
                                             </div>
                                         </div>
-                                        <div class="col-12 col-md-8" *ngIf="isMSOCodeEnabled" style="display: none;">
+                                        <!-- <div class="col-12 col-md-8" *ngIf="isMSOCodeEnabled" style="display: none;">
                                             <input placeholder="Enter Smartcard" type="text" formControlName="intendid"
                                                 [(ngModel)]="intendid_1" maxlength="20">
                                             <div *ngIf="form.get('intendid')?.invalid && form.get('intendid')?.touched">
@@ -97,7 +106,7 @@
                                                 </small>
 
                                             </div>
-                                        </div>
+                                        </div> -->
                                         <div class="col-12 col-md-8" *ngIf="isAreaCodeEnabled">
                                             <input type="text" placeholder="Search a Operator"
                                                 formControlName="intendid" [(ngModel)]="intendname"
