--- a/src/app/admin/features/channel_setting/Reports/msoreports/msoreports.component.html
+++ b/src/app/admin/features/channel_setting/Reports/msoreports/msoreports.component.html
@@ -2,44 +2,47 @@
 <!-- <div style="background-color: rgba(109, 107, 107, 0.8);padding: 1rem;">
   <h6 style="color: rgb(255, 255, 255);">LCO BILL REPORTS</h6>
 </div> -->
-<section>
-  <mat-accordion class="example-headers-align ">
-    <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle class="pannel"
-      style="border: none !important;">
-      <mat-expansion-panel-header>
-        <!-- <mat-panel-title class="text2">LCO BILL REPORTS</mat-panel-title> -->
-        <mat-panel-title class="reporthead">LCO BILL REPORTS</mat-panel-title>
-      </mat-expansion-panel-header>
-      <!-- <h5>PRODUCT HISTORY</h5> -->
-      <div class="cardContainer">
-        <div class="card royal-card tooltip-container" *ngIf="isshow"
-          (click)="openMsoDialog('recharge_deduction_including')"><i class="fas fa-layer-group"></i>
-          <div><strong>Recharge/Deduction <br> Report - Including GST</strong> </div>
-          <div class="tooltip">Including GST</div>
-        </div>
-        <div class="card royal-card tooltip-container" (click)="openMsoDialog('recharge_deduction_excluding')"><i
-            class="fas fa-layer-group"></i>
-          <div><strong>Recharge/Deduction <br> Report - Excluding GST</strong> </div>
-          <div class="tooltip">Excluding GST</div>
-        </div>
-        <!-- <div class="card royal-card tooltip-container" (click)="openMsoDialog('recharge_invoice')"><i class="fas fa-cube"></i>
+<div style="max-height: 740px; overflow: scroll;">
+
+
+  <section>
+    <mat-accordion class="example-headers-align ">
+      <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle class="pannel"
+        style="border: none !important;">
+        <mat-expansion-panel-header>
+          <!-- <mat-panel-title class="text2">LCO BILL REPORTS</mat-panel-title> -->
+          <mat-panel-title class="reporthead">LCO BILL REPORTS</mat-panel-title>
+        </mat-expansion-panel-header>
+        <!-- <h5>PRODUCT HISTORY</h5> -->
+        <div class="cardContainer">
+          <div class="card royal-card tooltip-container" *ngIf="isshow"
+            (click)="openMsoDialog('recharge_deduction_including')"><i class="fas fa-layer-group"></i>
+            <div><strong>Recharge/Deduction <br> Report - Including GST</strong> </div>
+            <div class="tooltip">Including GST</div>
+          </div>
+          <div class="card royal-card tooltip-container" (click)="openMsoDialog('recharge_deduction_excluding')"><i
+              class="fas fa-layer-group"></i>
+            <div><strong>Recharge/Deduction <br> Report - Excluding GST</strong> </div>
+            <div class="tooltip">Excluding GST</div>
+          </div>
+          <!-- <div class="card royal-card tooltip-container" (click)="openMsoDialog('recharge_invoice')"><i class="fas fa-cube"></i>
           <div><strong>Recharge Invoice Report</strong> </div>
           <div class="tooltip">Recharge Invoice</div>
         </div> -->
-        <div class="card royal-card tooltip-container" (click)="openMsoDialog('recharge_history')"><i
-            class="fas fa-calendar-alt"></i>
-          <div><strong>Recharge History Report</strong> </div>
-          <div class="tooltip">Recharge History</div>
-        </div>
-        <div class="card royal-card tooltip-container" (click)="openMsoDialog('online_payment')"><i
-            class="fas fa-file-invoice"></i>
-          <div><strong> Online Payment History</strong> </div>
-          <div class="tooltip">Operator/Subscriber/Sublco Online Payment</div>
-        </div>
+          <div class="card royal-card tooltip-container" (click)="openMsoDialog('recharge_history')"><i
+              class="fas fa-calendar-alt"></i>
+            <div><strong>Recharge History Report</strong> </div>
+            <div class="tooltip">Recharge History</div>
+          </div>
+          <div class="card royal-card tooltip-container" (click)="openMsoDialog('online_payment')"><i
+              class="fas fa-file-invoice"></i>
+            <div><strong> Online Payment History</strong> </div>
+            <div class="tooltip">Operator/Subscriber/Sublco Online Payment</div>
+          </div>
 
 
-        <!-- ------------------------------------------------------------------- -->
-        <!-- <div class="card royal-card tooltip-container"><i class="fas fa-clipboard-list"></i>
+          <!-- ------------------------------------------------------------------- -->
+          <!-- <div class="card royal-card tooltip-container"><i class="fas fa-clipboard-list"></i>
           <div><strong> Subscriber Online <br> Payment History</strong> </div>
           <div class="tooltip">Subscriber Online Payment</div>
         </div>
@@ -47,82 +50,87 @@
           <div><strong> Sublco Online <br> Payment History</strong> </div>
           <div class="tooltip">Sublco Online Payment</div>
         </div> -->
-        <!-- =============================================== -->
-        <div class="card royal-card tooltip-container" (click)="openMsoDialog('sublco_offline')"><i class="fas fa-clipboard-list"></i>
-          <div><strong> Sublco Offline <br> Payment History</strong> </div>
-          <div class="tooltip">Sublco Offline Payment</div>
-        </div>
-        <div class="card royal-card tooltip-container" (click)="openMsoDialog('walletShare')"><i
-            class="fas fa-clipboard-list"></i>
-          <div><strong> Wallet Share Report</strong> </div>
-          <div class="tooltip">Recharge Invoice</div>
-        </div>
-        <div class="card royal-card tooltip-container" (click)="openMsoDialog('monthly_datewise')"><i
-            class="fas fa-clipboard-list"></i>
-          <div><strong>Monthly Datewise <br> Payment Collection Report</strong> </div>
-        </div>
+          <!-- =============================================== -->
+          <div class="card royal-card tooltip-container" (click)="openMsoDialog('sublco_offline')"><i
+              class="fas fa-clipboard-list"></i>
+            <div><strong> Sublco Offline <br> Payment History</strong> </div>
+            <div class="tooltip">Sublco Offline Payment</div>
+          </div>
+          <div class="card royal-card tooltip-container" (click)="openMsoDialog('walletShare')"><i
+              class="fas fa-clipboard-list"></i>
+            <div><strong> Wallet Share Report</strong> </div>
+            <div class="tooltip">Recharge Invoice</div>
+          </div>
+          <div class="card royal-card tooltip-container" (click)="openMsoDialog('monthly_datewise')"><i
+              class="fas fa-clipboard-list"></i>
+            <div><strong>Monthly Datewise <br> Payment Collection Report</strong> </div>
+          </div>
 
-        <div class="card royal-card tooltip-container" (click)="openMsoDialog('subscriber_bill')"><i
-            class="fas fa-clipboard-list"></i>
-          <div><strong>Subscriber Bill Report</strong> </div>
-        </div>
-        <div class="card royal-card tooltip-container" (click)="openMsoDialog('user_rechargehistory')"><i
-            class="fas fa-clipboard-list"></i>
-          <div><strong>User Recharge History</strong> </div>
-        </div>
-        <!-- <div class="card royal-card tooltip-container" (click)="openMsoDialog('unpair_smartcard')"><i class="fas fa-clipboard-list"></i>
+          <div class="card royal-card tooltip-container" (click)="openMsoDialog('subscriber_bill')"><i
+              class="fas fa-clipboard-list"></i>
+            <div><strong>Subscriber Bill Report</strong> </div>
+          </div>
+          <div class="card royal-card tooltip-container" (click)="openMsoDialog('user_rechargehistory')"><i
+              class="fas fa-clipboard-list"></i>
+            <div><strong>User Recharge History</strong> </div>
+          </div>
+          <!-- <div class="card royal-card tooltip-container" (click)="openMsoDialog('unpair_smartcard')"><i class="fas fa-clipboard-list"></i>
           <div><strong>Unpair Smartcard <br> Recharge Details</strong> </div>
           <div class="tooltip">Unpair Smartcard Recharge</div>
         </div> -->
 
-      </div>
-    </mat-expansion-panel>
-  </mat-accordion>
-</section>
-<section>
-  <mat-accordion class="example-headers-align">
-    <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle class="pannel">
-      <mat-expansion-panel-header>
-        <mat-panel-title class="reporthead">PACKAGE REPORTS</mat-panel-title>
-      </mat-expansion-panel-header>
-      <!-- <h5>SMARTCARD HISTORY</h5> -->
-      <div class="cardContainer">
-        <div class="card royal-card tooltip-container" (click)="openMsoDialog('lco_active_subscription')"> <i
-            class="fas fa-cloud-upload-alt"></i>
-          <div><strong>Lcowise Active <br> Subscription Count Report</strong> </div>
         </div>
-        
-        <div class="card royal-card tooltip-container" (click)="openMsoDialog('customer_activation_form')"><i class="fas fa-ban"></i>
-          <div><strong>Customer Activation Form</strong> </div>
-        </div>
-        <div class="card royal-card tooltip-container" (click)="openMsoDialog('lcowiseExpiryCountDiff')"><i class="fas fa-rocket"></i>
-          <div><strong>Lcowise Expiry <br> Count Difference Report</strong> </div>
-        </div>
-        <!-- <div class="card"><i class="fas fa-th-list"></i>
+      </mat-expansion-panel>
+    </mat-accordion>
+  </section>
+  <section>
+    <mat-accordion class="example-headers-align">
+      <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle class="pannel">
+        <mat-expansion-panel-header>
+          <mat-panel-title class="reporthead">PACKAGE REPORTS</mat-panel-title>
+        </mat-expansion-panel-header>
+        <!-- <h5>SMARTCARD HISTORY</h5> -->
+        <div class="cardContainer">
+          <div class="card royal-card tooltip-container" (click)="openMsoDialog('lco_active_subscription')"> <i
+              class="fas fa-cloud-upload-alt"></i>
+            <div><strong>Lcowise Active <br> Subscription Count Report</strong> </div>
+          </div>
+
+          <div class="card royal-card tooltip-container" (click)="openMsoDialog('customer_activation_form')"><i
+              class="fas fa-ban"></i>
+            <div><strong>Customer Activation Form</strong> </div>
+          </div>
+          <div class="card royal-card tooltip-container" (click)="openMsoDialog('lcowiseExpiryCountDiff')"><i
+              class="fas fa-rocket"></i>
+            <div><strong>Lcowise Expiry <br> Count Difference Report</strong> </div>
+          </div>
+          <!-- <div class="card"><i class="fas fa-th-list"></i>
           <div><strong>Alacarte Log</strong> </div>
         </div>
         <div class="card"><i class="fas fa-file-alt"></i>
           <div><strong>Box Update Report</strong> </div>
         </div> -->
-      </div>
-    </mat-expansion-panel>
-  </mat-accordion>
-</section>
-<section>
-  <mat-accordion class="example-headers-align">
-    <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle class="pannel">
-      <mat-expansion-panel-header>
-        <mat-panel-title class="reporthead">PACKAGE COUNT REPORTS</mat-panel-title>
-      </mat-expansion-panel-header>
-      <!-- <h5>CAS OPERATION HISTORY</h5> -->
-      <div class="cardContainer">
-        <div class="card royal-card tooltip-container" (click)="openMsoDialog('total_lco')"><i class="fas fa-check-circle"></i>
-          <div><strong>Total Lco Report </strong> </div>
         </div>
-        <div class="card royal-card tooltip-container" (click)="openMsoDialog('lco_transfer_details')"><i class="fas fa-tv"></i>
-          <div><strong>Lco Transfer Details Report</strong> </div>
-        </div>
-        <!-- <div class="card"><i class="fas fa-file-upload"></i>
+      </mat-expansion-panel>
+    </mat-accordion>
+  </section>
+  <section>
+    <mat-accordion class="example-headers-align">
+      <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle class="pannel">
+        <mat-expansion-panel-header>
+          <mat-panel-title class="reporthead">PACKAGE COUNT REPORTS</mat-panel-title>
+        </mat-expansion-panel-header>
+        <!-- <h5>CAS OPERATION HISTORY</h5> -->
+        <div class="cardContainer">
+          <div class="card royal-card tooltip-container" (click)="openMsoDialog('total_lco')"><i
+              class="fas fa-check-circle"></i>
+            <div><strong>Total Lco Report </strong> </div>
+          </div>
+          <div class="card royal-card tooltip-container" (click)="openMsoDialog('lco_transfer_details')"><i
+              class="fas fa-tv"></i>
+            <div><strong>Lco Transfer Details Report</strong> </div>
+          </div>
+          <!-- <div class="card"><i class="fas fa-file-upload"></i>
           <div><strong>Invertory Upload Report</strong> </div>
         </div>
         <div class="card"><i class="fas fa-store"></i>
@@ -134,7 +142,8 @@
         <div class="card"><i class="fas fa-exclamation-circle"></i>
           <div><strong>Not Allocated Smartcard</strong> </div>
         </div> -->
-      </div>
-    </mat-expansion-panel>
-  </mat-accordion>
-</section>
+        </div>
+      </mat-expansion-panel>
+    </mat-accordion>
+  </section>
+</div>
