--- a/src/app/admin/features/channel_setting/_Dialogue/local+broadcasting/createltb/createltb.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/local+broadcasting/createltb/createltb.component.html
@@ -1,6 +1,7 @@
 <div>
     <div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
-        <h6>Create New LTB</h6>
+        <!-- <h6>Create New LTB</h6> -->
+        <h6>CREATE LOCAL PAYMENT CHANNEL</h6>
         <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
     </div>
     <div style="padding: 1rem;">
@@ -10,13 +11,17 @@
                     <span for="">Local Channel Name</span>
                 </div>
                 <div class="col-12 col-md-6">
-                    <!-- <select [(ngModel)]="channel">
+                    <select id="channel" [(ngModel)]="channel">
                         <option value="0" selected>Selected channel Name</option>
-                        <option *ngFor="let op of chNameList" [value]="op.channelid">
+                        <!-- <option *ngFor="let op of chNameList" [value]="op.channelid">
                             {{ op.channelname }}
+                        </option> -->
+                        <option *ngFor="let channel of filteredChannels" [value]="channel.channelid"
+                            (click)="onChannelStatusChange(channel)">
+                            {{ channel.channelname }}
                         </option>
-                    </select> -->
-                    <input type="text" matInput [matAutocomplete]="autochannel" [(ngModel)]="channel" maxlength="20"
+                    </select>
+                    <!-- <input type="text" matInput [matAutocomplete]="autochannel" [(ngModel)]="channel" maxlength="20"
                         (input)="filterChannels($event)" placeholder="Selected CHANGE Name"
                         [matAutocompleteDisabled]="false" [value]="selectedChannelName">
 
@@ -25,7 +30,7 @@
                             (click)="onChannelStatusChange(channel)">
                             {{ channel.channelname }}
                         </mat-option>
-                    </mat-autocomplete>
+                    </mat-autocomplete> -->
                 </div>
             </div>
             <div class="input_box display mb-1">
@@ -33,14 +38,15 @@
                     <span for="">LTB name</span>
                 </div>
                 <div class="col-12 col-md-6">
-                    <!-- <select [(ngModel)]="opName">
+                    <select id="ltb" [(ngModel)]="opName">
                         <option value="0" selected>Selected Operator Name</option>
-                        <option *ngFor="let op of opNameList" [value]="op.packageid">
-                            {{ op.packagename }}
+                        <option *ngFor="let operator of filteredOperators" [value]="operator.packageid"
+                            (ngModelChange)="onSubscriberStatusChange($event)">
+                            {{ operator.packagename }}
                         </option>
-                    </select> -->
+                    </select>
 
-                    <input type="text" matInput [matAutocomplete]="auto" [(ngModel)]="opName" maxlength="20"
+                    <!-- <input type="text" matInput [matAutocomplete]="auto" [(ngModel)]="opName" maxlength="20"
                         (input)="filterOperators($event)" placeholder="Selected Operator Name"
                         [matAutocompleteDisabled]="false" [value]="selectedOperator?.packagename">
 
@@ -49,7 +55,7 @@
                             (click)="onSubscriberStatusChange(operator)">
                             {{ operator.packagename }}
                         </mat-option>
-                    </mat-autocomplete>
+                    </mat-autocomplete> -->
                 </div>
             </div>
 
