--- a/src/app/admin/features/inventory/allocated/allocated.component.html
+++ b/src/app/admin/features/inventory/allocated/allocated.component.html
@@ -1,17 +1,17 @@
-<div class="card">
+<div class="card" style="max-height: 775px;overflow: scroll;">
     <!-- <div class="input_box col-12 col-md-6 col-sm-6 d-flex justify-content-center align-items-center mb-3"> -->
-    <div class="input_box col-12 col-md-6 col-lg-4 display justify-content-center align-items-center"
+    <div class=" col-12 col-md-12 col-lg-8 display justify-content-center align-items-center mb-3 "
         style="margin-left: 3rem;">
         <!-- <div class="col-12 col-sm-6 col-lg-4"> -->
         <span style="font-size: medium;font-weight: 700;">Search:</span> &nbsp;
-        <div class="mb-3 col-10 col-md-5 ">
+        <div class="mb-3 col-10 col-md-5 input_box">
             <input type="text" placeholder="Search for Smartcard or Boxid" [(ngModel)]="smartcard">
             <!-- <div *ngIf="submitted && !smartcard" class="text-danger" style="font-size: small;">
                 Smartcard is required
             </div> -->
         </div>
         &nbsp;
-        <div class="col-10 col-md-5 mb-3">
+        <div class="col-10 col-md-5 mb-3 input_box">
             <input type="text" matInput [matAutocomplete]="auto" [(ngModel)]="selectedLcoName" maxlength="20"
                 (input)="filterOperators($event)" placeholder="Select a Operator" [matAutocompleteDisabled]="false"
                 [value]="selectedOperator?.name">
@@ -27,7 +27,7 @@
             </div> -->
         </div>
         &nbsp;
-        <button class="btn  bttn" (click)="Search()" style="background-color: rgb(144, 188, 245);    margin-top: -2vh;
+        <button class="btn  bttn" (click)="Search()" style="background-color: rgb(144, 188, 245);    margin-top: -1vh;
     line-height: 3vh;">
             <i class="fa " aria-hidden="true">Search</i>
         </button>
@@ -53,10 +53,10 @@
                     <!-- <div class="tooltip">Pdf</div> -->
                 </div>
             </div>
-            <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class" rowAnimation style="max-height: 775px;overflow: scroll;"
-                [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData"
-                (selectionChanged)="onSelectionChanged()" (gridReady)="onGridReady($event)"
-                [enableCellTextSelection]="true">
+            <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class" 
+                style="max-height: 775px;overflow: scroll;" [rowSelection]="rowSelection" [gridOptions]="gridOptions"
+                [columnDefs]="columnDefs" [rowData]="rowData" (selectionChanged)="onSelectionChanged()"
+                (gridReady)="onGridReady($event)" [enableCellTextSelection]="true">
             </ag-grid-angular>
         </div>
     </div>
