--- a/src/app/admin/features/local_broadcasting/payment-channel/payment-channel.component.html
+++ b/src/app/admin/features/local_broadcasting/payment-channel/payment-channel.component.html
@@ -1,6 +1,7 @@
 <div class="card">
 
-    <h5>Local Payment Channel</h5>
+    <!-- <h5>Local Payment Channel</h5> -->
+    <h5> PAYMENT CHANNEL MASTER</h5>
     <div class="row d-flex align-items-center justify-content-center">
         <div class="col-12 col-sm-12 col-md-12  m-3">
             <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class" rowAnimation style="max-height: 775px;overflow: scroll;"
