--- a/src/app/admin/features/navbar/navbar.component.html
+++ b/src/app/admin/features/navbar/navbar.component.html
@@ -43,7 +43,7 @@
 <!-- NAVBAR -->
 <section id="content">
     <!-- NAVBAR -->
-    <div class="" style="position: sticky; top: 0;z-index: 10;">
+    <!-- <div class="" style="position: sticky; top: 0;z-index: 10;">
       
         <div class="nav-sub">
             <div class="nav-container"
@@ -102,7 +102,21 @@
         </div>
 
 
-    </div>
+    </div> -->
+    <header>
+        <div class="header-banner">
+            <h1>Visit Finland</h1>
+        </div>
+        <div class="clear"></div>
+        <nav>
+            <div class="site-title">Finland</div>
+            <ul>
+                <li><a href="/archive">Archive</a></li>
+                <li><a href="/events">Events</a></li>
+                <li><a href="/contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <!-- NAVBAR -->
    
 
