--- a/src/assets/css/nav.css
+++ b/src/assets/css/nav.css
@@ -313,18 +313,33 @@ nav {
     box-shadow: 0 8px 6px -11px black;
 }
 
-.nav-sub {
-    background: var(--light);
-    /* height: 32px; */
+/* .nav-sub {
     display: flex;
+    background: #2d584e;
     align-items: center;
     grid-gap: 28px;
     position: sticky;
     top: 42px;
     left: 0;
     z-index: 99;
-}
+} */
 
+/* .nav-sub {
+    background: #2d584e;
+    color: aliceblue;
+    text-transform: capitalize;
+    font-size: large;
+    display: flex;
+    align-items: center;
+    grid-gap: 28px;
+    position: sticky;
+    padding: 0 10px;
+    top: 0;
+    left: 0;
+
+    max-height: 65px;
+    z-index: 99;
+} */
 nav .toggle-sidebar {
     font-size: 18px;
     cursor: pointer;
@@ -484,7 +499,6 @@ main .info-data {
     margin-top: 36px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-    /* grid-template-columns: repeat(auto-fit, minmax(380px, 1fr)); */
     grid-gap: 20px;
 }
 
@@ -492,8 +506,7 @@ main .info-data .card {
     padding: 20px;
     border-radius: 10px;
     background: var(--light);
-    /* box-shadow: 4px 4px 16px rgba(0, 0, 0, .05); */
-    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+
     box-shadow: 0 1px 1px 0px rgba(0, 0, 0, 0.05),
         0 1px 1px 0 rgba(0, 0, 0, 0.05),
         0 0px 6px 0 rgba(0, 0, 0, 0.1);
@@ -717,11 +730,6 @@ main form {
     margin-top: 6px;
 }
 
-/* main .form-group { */
-/* width: 100%; */
-/* display: flex; */
-/* grid-gap: 10px; */
-/* } */
 
 main .form-group input {
     flex-grow: 1;
@@ -796,3 +804,14 @@ main .btn-send:hover {
         left: 0px;
     }
 }
+
+
+
+
+
+
+
+
+
+
+
