--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,14 +39,7 @@ h6 {
     margin-bottom: 0rem;
 }
 
-// .head {
-//     // background-color: #6e9088;
-//     padding: 10px;
-//     // border-radius: 8px;
-//     color:  #fff;
-//     font-size: large;
-//     font-weight: bold;
-// }
+
 
 .container .title p::before {
     content: "";
@@ -94,7 +87,8 @@ h6 {
 
 body {
     min-height: 100vh;
-    background-color: white;
+    // background-color: white;
+    // background-color: #f4f7fa;
     transition: var(--tran-05);
     // background: linear-gradient(to right, #058372, #acf3cc);
 }
@@ -109,10 +103,10 @@ body {
     margin: 10px 0px;
 }
 
-.ag-cell {
-    // text-align: center !important;
-    // text-align: left !important;
-}
+// .ag-cell {
+//     text-align: center !important;
+//     text-align: left !important;
+// }
 
 .Head {
     background-color: var(--primary-color);
@@ -149,35 +143,7 @@ body {
     font-size: 20px;
 }
 
-// .head {
-//     background-color: lightcyan;
-//     padding: 10px;
-//     border-radius: 8px;
-//     color: var(--primary-color);
-//     font-size: large;
-//     font-weight: bold;
-// }
-// .ag-cell-focus,
-// .ag-cell-no-focus {
-//     border: none !important;
-// }
 
-// .no-border.ag-cell:focus {
-//     border: none !important;
-//     outline: none;
-// }
-
-// .ag-header-cell-label {
-//     font-weight: 400 !important;
-//     font-size: larger;
-// }
-
-// .ag-header-viewport {
-//     text-align: center !important;
-//     // background: #51586e;
-//     // background: #b2cfc0;
-//     background: #b2cfc0;
-// }
 .ag-header-column-resize {
     color: darkgreen;
 }
@@ -193,7 +159,6 @@ body {
 
 .ag-header-row {
     color: #000 !important;
-    // color: #fff !important;
     align-items: left;
     text-align: left;
 }
@@ -217,7 +182,6 @@ body {
     margin-left: -50px;
     opacity: 0;
     transition: opacity 0.3s;
-    // width: auto;
     width: max-content;
 }
 
@@ -226,16 +190,6 @@ body {
     opacity: 1;
 }
 
-// .tooltip::after {
-//     content: '';
-//     position: absolute;
-//     top: 100%;
-//     left: 50%;
-//     margin-left: -5px;
-//     border-width: 5px;
-//     border-style: solid;
-//     border-color: black transparent transparent transparent;
-// }
 
 .form-control {
     border: 0.5px solid rgb(155, 150, 150) !important;
@@ -296,6 +250,7 @@ div:where(.swal2-container) h2:where(.swal2-title) {
     font-family: 'Poppins', sans-serif;
     transition: all 120ms ease-out 0s;
 }
+
 .input_box2 input {
     width: 100%;
     height: 45px;
@@ -350,13 +305,8 @@ div:where(.swal2-container) h2:where(.swal2-title) {
 
 
 
-body {
-    margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
-}
-
 @media screen and (max-width:560px) {
-    input_box label {
+    .input_box label {
         font-weight: 500;
         margin-bottom: 5px;
         display: block;
@@ -778,7 +728,6 @@ input:checked+.slider:before {
     font-family: 'Poppins', sans-serif;
     transition: all 120ms ease-out 0s;
     height: 6vh;
-
 }
 
 .input_box_old select {
@@ -816,15 +765,8 @@ input:checked+.slider:before {
 }
 
 
-
-
-body {
-    margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
-}
-
 @media screen and (max-width:560px) {
-    input_box_old label {
+    .input_box_old label {
         font-weight: 500;
         margin-bottom: 5px;
         display: block;
@@ -839,4 +781,21 @@ body {
         font-size: 14px;
         color: #243359;
     }
+}
+
+.export-icon {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    font-size: smaller;
+}
+
+.export-icon img {
+    transition: transform 0.3s ease;
+    width: 40px;
+    height: 40px;
+}
+
+.export-icon img:hover {
+    transform: scale(1.1);
 }
